Add docs and unit tests

--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -18,9 +18,5 @@
     "inlineSourceMap": true,
     "downlevelIteration": true
   },
-  "include": [
-    "src/**/*",
-    "../client/src/draft_test.ts",
-    "../client/src/draft_test.ts"
-  ]
+  "include": ["src/**/*"]
 }
