--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -24,7 +24,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
+          cd server_python && python -m pip install --upgrade pip
           pip install -r requirements.txt
 
       - name: Check format using black
@@ -36,21 +36,18 @@ jobs:
           pylint ./server_python/src ./server_python/tests
           # pylint **/*.py
 
-      # might be, but has error
       - name: Run unit test
         run: |
           PYTHONPATH="${PYTHON_PATH}:./server_python/src" python -m pytest -v server_python/tests/unit
 
-      # might be, but has error
       - name: Run functional test
         run: |
           PYTHONPATH="${PYTHON_PATH}:./server_python/src" python -m pytest -v server_python/tests/functional
-      # hasn't check
+
       - name: Run coverage
         run: |
           PYTHONPATH="${PYTHON_PATH}:./server_python/src" coverage run -m pytest -v server_python/tests/unit server_python/tests/functional
 
-      # hasn't check
       - name: Generate coverage report
         run: |
           coverage report -m
