--- a/server_python/requirements.txt
+++ b/server_python/requirements.txt
@@ -1,8 +1,35 @@
+astroid==2.15.5
 black==23.3.0
+certifi==2023.5.7
+charset-normalizer==3.1.0
+click==8.1.3
 coverage==7.2.3
+dill==0.3.6
+exceptiongroup==1.1.1
 Flask==2.2.3
+idna==3.4
+importlib-metadata==6.7.0
+iniconfig==2.0.0
+isort==5.12.0
+itsdangerous==2.1.2
+Jinja2==3.1.2
+lazy-object-proxy==1.9.0
+MarkupSafe==2.1.3
+mccabe==0.7.0
+mypy-extensions==1.0.0
+packaging==23.1
+pathspec==0.11.1
+platformdirs==3.8.0
+pluggy==1.2.0
 pylint==2.17.2
 pytest==7.3.0
 pytest-cov==4.0.0
 pytest-mock==3.10.0
 requests==2.28.2
+tomli==2.0.1
+tomlkit==0.11.8
+typing-extensions==4.6.3
+urllib3==1.26.16
+Werkzeug==2.3.6
+wrapt==1.15.0
+zipp==3.15.0
